--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "devDependencies": {
         "@babel/preset-env": "^7.18.10",
         "@babel/preset-typescript": "^7.18.6",
+        "@types/config": "^3.3.0",
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.6",
+        "@types/redis": "^4.0.11",
         "@typescript-eslint/eslint-plugin": "^5.32.0",
         "@typescript-eslint/parser": "^5.32.0",
         "eslint": "^8.22.0",
@@ -30,6 +32,9 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
-        "express": "^4.18.1"
+        "config": "^3.3.7",
+        "etcd3": "^1.1.0",
+        "express": "^4.18.1",
+        "redis": "^4.2.0"
     }
 }
