--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "@babel/preset-typescript": "^7.18.6",
         "@types/config": "^3.3.0",
         "@types/express": "^4.17.13",
+        "@types/express-validator": "^3.0.0",
+        "@types/http-status-codes": "^1.2.0",
         "@types/jest": "^28.1.6",
         "@types/redis": "^4.0.11",
         "@typescript-eslint/eslint-plugin": "^5.32.0",
@@ -36,6 +38,8 @@
         "config": "^3.3.7",
         "etcd3": "^1.1.0",
         "express": "^4.18.1",
+        "express-validator": "^6.14.2",
+        "http-status-codes": "^2.2.0",
         "redis": "^4.2.0"
     }
 }
