--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
         "@types/http-status-codes": "^1.2.0",
         "@types/jest": "^28.1.6",
         "@types/redis": "^4.0.11",
+        "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.32.0",
         "@typescript-eslint/parser": "^5.32.0",
         "eslint": "^8.22.0",
         "jest": "^28.1.3",
         "nodemon": "^2.0.19",
         "prettier": "2.7.1",
+        "supertest": "^6.2.4",
         "ts-jest": "^28.0.7",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4"
